--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.4",
     "nodemon": "^3.1.4"
   }
 }
